# SB3_drone

./: .gitignore  pyproject.toml
custom_envs/: __init__.py
custom_envs/envs/: __init__.py  tacdrone_env.py  tacdrone_env_v04.py  tacdrone_env_v05.py  tacdrone_env_v06.py  tacdrone_env_v07.py  tacdrone_env_v08.py
src/: test_CartPole_v00.py  test_PID_Drone_v00.py  test_PPO_Drone_v00_parallel_seeds.py  test_PPO_Drone_v00_parallel_seeds_vecenv.py  test_PPO_Gaussian_Drone_v00.py  test_PPO_gSDE_Drone_v00.py  test_Pendulum_Gaussian_v00.py  test_Pendulum_SAC_gSDE_v00_parallel_seeds.py  test_Pendulum_gSDE_v00.py  test_Pendulum_gSDE_v00_parallel_freqs.py  test_Pendulum_gSDE_v00_parallel_seeds.py  test_SAC_Drone_v00_parallel_seeds.py  test_SAC_Drone_v00_parallel_seeds_vecenv.py
