[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sb3-drone"
version = "0.1.0"
description = "Custom Gymnasium drone environments for Stable-Baselines3 experiments."
requires-python = ">=3.10"
dependencies = [
    "gymnasium",
    "mujoco",
    "numpy",
    "scipy",
]

[tool.setuptools]
packages = ["custom_envs", "custom_envs.envs"]

[tool.setuptools.package-data]
"custom_envs.envs" = ["*.xml"]
